test/org/midica/testfiles/failing/meta-with-param.midica
INCLUDE inc/instruments.midica

META test
	composer	Beethoven
END
